------------------------------------------------------------------------
r2647 | gaser | 2025-02-09 01:53:58

Changed paths:
 M CHANGES.txt
 M cat_surf_results.m
 M cat_vol_slice_overlay.m

Updated: Added new options for defining minimum slucter extent and overlap to
         atlas label to cat_surf_results.m and cat_vol_slice_overlay.m
         ------------------------------------------------------------------------
r2630 | dahnke | 2025-01-12 18:06:50

Changed paths:
 M CHANGES.txt
 M cat12.m
 M cat_conf_tools.m
 M cat_run_job.m
 M cat_run_job1639.m
 M cat_stat_marks.m
 M cat_vol_mp2rage.m
 M cat_vol_qa.m
 M cat_vol_qa201901.m
 M cat_vol_qa201901x.m
 M cat_vol_qa202110.m
 M cat_vol_qa202205.m
 M cat_vol_qa202310.m

Changed:    Added MP(2)Rage Preprocessing call in menu (cat12.m).
Changed:    Updated MP2rage batch structure in cat_conf_tools by  
            removing not supported fields (trimming), adding  
            intensity scaling option, and updating help comments.
Changed:    Updated call of MP2Rage batch in cat_run_job(1639).
Changed:    Updated MP2rage batch cat_vol_mp2rage. Added iterative
            SPM preprocessing to improve corrections. Removed 
            head trimming. Improved intensity normalisation.
Changed:    Corrected bug in TIV update in cat_vol_qa201901(x),
            cat_vol_qa202110, cat_vol_qa202205 and cat_vol_qa202310.
Changed:    Added settings to run with SPM12 and synthseg input in
            cat_vol_qa and correction of smaller bugs. Updated default
            scalings of different versions by latest BWP runs.
Changed:    Updates of cat_vol_qa201901x and cat_vol_qa 202310 to
            (i) limit processing resolution, (ii) improve lesion masking,
            (iii) simplified correction of tissue segments, (iv) further
            simplifications/cleanup. Added FEC estimation.
New:        Added cat_vol_qa202412 with own quick simple segmentation.
            